# smart-artifact-parser

./: .gitignore  CLAUDE.md  COMMIT_COMMENT.md  LICENSE  PLAN.md  README.md  pyproject.toml
samples/: visit_note.txt
src/: __init__.py  cli.py  extractor.py  parser.py  schemas.py
